made website more viewer friendly

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<div class="subtitle">My latest works</div>
 	</header>
 	<div class="content list-works">
-		<div class="list-works__column">
-			<a href="Projects/utubesearchengine/index.html" class="list-works__item list-works__item_big layer open-popup_js" data-show-effect="fadeIn" data-show-delay="100" data-id="he">
+		<div class="list-works__row">
+			<a href="Projects/utubesearchengine/index.html" target="_blank" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="100" data-id="he">
 				<div class="list-works__wrap-img">
 					<img src="img/uTube.jpg" class="responsive-img" alt="uTube Video Search Engine" />
 				</div>	
@@ -80,9 +80,8 @@
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
-		</div>
+		
 
-		<div class="list-works__column">
 			<a href="Projects/digitalclock/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="300" data-id="wgm">
 				<div class="list-works__wrap-img">
 					<img src="img/digitalclock.jpg" class="responsive-img" alt="clock with date" />
@@ -123,7 +122,7 @@
 				</div>
 			</a>	
 
-			<a href="Projects/dragonballgallery/index.html" class="list-works__item list-works__item_big layer open-popup_js" data-show-effect="fadeIn" data-show-delay="700" data-id="lrmw">
+			<a href="Projects/dragonballgallery/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="700" data-id="lrmw">
 				<div class="list-works__wrap-img">
 					<img src="img/dbz.jpg" class="responsive-img" alt="Work" />
 				</div>
@@ -132,7 +131,6 @@
 					<span class="list-works__link-project">showmore</span>
 				</div>
 			</a>
-		</div>
 	</div>
 </section>
 
@@ -201,8 +199,7 @@
         </header>
         <div class="content skills">
             <div class="skills__column layer" data-show-effect="fadeIn" data-show-delay="400">
-                <p>The first language I learned would be C back in 2008, I had a passion for learning how things worked and functioned. I would generally take things apart and study the components and learned how to put them back together.</p>
-                <p> I have been studying at Codify Academy for the past 5 months, learning a wide variety of frames works and languages. I try to study 5-6 hours a day and push my work on GITHUB or codepen. I like to see how things work and understand why they do.</p>
+               <p></p>
             </div>
             <div class="skills__column skills-bar">
                 <div class="skills-bar__item">
@@ -415,7 +412,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/utubesearchengine/index.html" class="popup__show-more">SEARCH VIDEO</a>
+							<a href="Projects/utubesearchengine/index.html" target="_blank" class="popup__show-more">SEARCH VIDEO</a>
 						</div>
 					</div>
 				</div>
@@ -438,7 +435,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-                            <a href="Projects/digitalclock/index.html" class="popup__show-more">CURRENT TIME</a>                
+                            <a href="Projects/digitalclock/index.html" target="_blank" class="popup__show-more">CURRENT TIME</a>                
                         </div>
 					</div>
 				</div>
@@ -461,7 +458,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/jquerygallery/index.html" class="popup__show-more">Go to gallery</a>
+							<a href="Projects/jquerygallery/index.html" target="_blank" class="popup__show-more">Go to gallery</a>
 						</div>
 					</div>
 				</div>
@@ -485,7 +482,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="1000" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/gokuportfolio/index.html" class="popup__show-more">World's Greatest Fighter</a>
+							<a href="Projects/gokuportfolio/index.html" target="_blank" class="popup__show-more">World's Greatest Fighter</a>
 						</div>
 					</div>
 				</div>
@@ -508,7 +505,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/quizapp/index.html" class="popup__show-more">Take the challenge!</a>
+							<a href="Projects/quizapp/index.html" target="_blank" class="popup__show-more">Take the challenge!</a>
 						</div>
 					</div>
 				</div>
@@ -532,7 +529,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/survey/index.html" class="popup__show-more">Help gather Information</a>
+							<a href="Projects/survey/index.html" target="_blank" class="popup__show-more">Help gather Information</a>
 						</div>
 					</div>
 				</div>
@@ -555,7 +552,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/tictactoe/index.html" class="popup__show-more">Play!!</a>
+							<a href="Projects/tictactoe/index.html" target="_blank" class="popup__show-more">Play!!</a>
 						</div>
 					</div>
 				</div>
@@ -577,7 +574,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="1200" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/37signals/index.html" class="popup__show-more">37 signals</a>
+							<a href="Projects/37signals/index.html" target="_blank" class="popup__show-more">37 signals</a>
 						</div>
 					</div>
 				</div>
@@ -599,7 +596,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="600" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/jquerymobileapp/index.html" class="popup__show-more">Track Your Runs!!</a>
+							<a href="Projects/jquerymobileapp/index.html" target="_blank" class="popup__show-more">Track Your Runs!!</a>
 						</div>
 					</div>
 				</div>
@@ -621,7 +618,7 @@
 					<div class="popup__sidebar lrmw_layer" data-show-delay="400" data-hide-delay="800" data-time="500" data-show-effect="fadeInRight" data-hide-effect="fadeOutRight">
 						<div class="popup__demo-box">
 							<h4 class="title title_small">Demo:</h4>
-							<a href="Projects/dragonballgallery/index.html" class="popup__show-more">Go Select Character</a>
+							<a href="Projects/dragonballgallery/index.html" target="_blank" class="popup__show-more">Go Select Character</a>
 						</div>
 					</div>
 				</div>
