--- a/index.html
+++ b/index.html
@@ -147,8 +147,6 @@
                 </div>
                 <div class="about-me__content">
                     <p class='aboutC'>I was born and raised in Oakland, CA. I was always curious about how things worked and why they worked. One of my favorite things to do is to take apart things and figure out all the components and put them back together. This lead me to developed a nack for coding projects. While coding, I give my best to comment out what each line of code is doing. When I work on a project, I try to study every bit and piece, so I would know it inside and out.</p>
-                    <p class="aboutC">I started learning HTML, CSS, and Javascript all one my own 2 years ago. I went to sites like Udemy, codeacademy to study what I can understand, while working fulltime and trying to support myself. While learning all on my own I found it hard at times with out a mentor or anybody to help me out. I started to look for bootcamps, that is how I ended up at Codify Academy.
-                    </p>
                 </div>
             </div>
             <section class="about-me__sidebar layer" data-show-effect="fadeInRight" data-show-delay="200">
@@ -199,7 +197,7 @@
         </header>
         <div class="content skills">
             <div class="skills__column layer" data-show-effect="fadeIn" data-show-delay="400">
-               <p></p>
+               <p>Here are some of the skills I used in my projects. I love to code and challenge myself on a daily bases.</p>
             </div>
             <div class="skills__column skills-bar">
                 <div class="skills-bar__item">
@@ -279,31 +277,54 @@
         <div class="timeline">
             <div class="timeline__line layer" data-show-effect="fadeInDown" data-show-delay="0" data-time="2000"></div>
             <div class="timeline__layout">
+                <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="700" data-time="300"></div>
+                <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1100">
+                    <span class="timeline__date">0ct 2017 - present</span>
+                    <span class="timeline__place-work">Freelancer</span>
+                </div>
+                <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
+                    <h3 class="title title_small timeline__title">Web Developer</h3>
+                    <div class="timeline__description">
+                        <p>using media queries and bootstrap to make responsive designs websites and applications<br>
+                            using jQuery to make applications, converting raw Javascript to jQuery<br>
+                            using CSS to add next level designs to websites and applications<br>
+                            Javascript to develope applications<br>
+                            design and maintenance websites <br>
+                            learn to ways to appearance new tasks<br>
+                            critical thinking and intense problem solvin</p>
+                    </div>
+                </article>
+            </div>  
+            <div class="timeline__layout">
+                <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1100" data-time="300"></div>
+                <div class="timeline__inner timeline__time  layer" data-show-effect="fadeIn" data-show-delay="1500" >
+                    <span class="timeline__date">Nov 2016 - present</span>
+                    <span class="timeline__place-work">devbybill</span>
+                </div>
+                <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1600">
+                    <h3 class="title title_small timeline__title">Web Developer</h3>
+                    <div class="timeline__description">
+                        <p>Build and maintain website using resposive designs<br>
+                            </p>
+                        
+                    </div>
+                </article>
+            </div>
+            <div class="timeline__layout">
                 <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="500" data-time="300"></div>
                 <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="900">
-                    <span class="timeline__date">2016 - 2017</span>
+                    <span class="timeline__date">Sept.2016 - Jan.2017</span>
                     <span class="timeline__place-work">Codify Academy</span>
                 </div>
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1000">
                     <h3 class="title title_small timeline__title">Front-end developer</h3>
                     <div class="timeline__description">
-                        <p>Started attending Codify Academy in 2016, 16 week Front-end Developer training program. Each week we had to build a couple of projects based on what we learned. Started witht the basics like CSS and HTML, then we advanced to Javascript, JQuery, Angular, Bootstrap, etc. </p>
+                        <p>16 week Front-end Developer training program<br>
+                            Each week we had to build a couple of projects based on what we learned<br>
+                            Started witht the basics like CSS and HTML, then we advanced to Javascript, JQuery, Angular, Bootstrap, etc. </p>
                     </div>
                 </article>
             </div>              
-            <div class="timeline__layout">
-                <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="700" data-time="300"></div>
-                <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1100">
-                    <span class="timeline__date">2015 - 2016</span>
-                    <span class="timeline__place-work">Oakland Warehouse</span>
-                </div>
-                <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
-                    <h3 class="title title_small timeline__title">Order Selector</h3>
-                    <div class="timeline__description">
-                        <p>I operated machinery such as pallet jacks, fork-lifts, plastic wrappers, cherry pickers to select client ordered items. These items ranged from office supplies to chemical products. General overtime was always a must which was fine with me.</p>
-                    </div>
-                </article>
-            </div>  
             <div class="timeline__layout">
                 <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="900" data-time="300"></div>
                 <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1300">
@@ -313,24 +334,13 @@
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1400">
                     <h3 class="title title_small timeline__title">Customer Service, Prop Player</h3>
                     <div class="timeline__description">
-                        <p>Regulate casino games such as three card, black jack, baccarrat, double hand, and tiles. Socialize with casino and players to make sure everyone is having a good time. Trained new hires and teach them the rules and regulations. Acting supervisor when they go on break, lunch, or meetings.</p>
+                        <p>Regulate casino games such as three card, black jack, baccarrat, double hand, and tiles.<br>
+                         Socialize with casino and players to make sure everyone is having a good time. <br>
+                         Trained new hires and teach them the rules and regulations. <br>
+                         Acting supervisor when they go on break, lunch, or meetings.</p>
                     </div>
                 </article>
             </div>  
-            <div class="timeline__layout">
-                <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1100" data-time="300"></div>
-                <div class="timeline__inner timeline__time  layer" data-show-effect="fadeIn" data-show-delay="1500" >
-                    <span class="timeline__date">2009-2011</span>
-                    <span class="timeline__place-work">Ikea Emeryvile</span>
-                </div>
-                <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1600">
-                    <h3 class="title title_small timeline__title">Customer Service Associate</h3>
-                    <div class="timeline__description">
-                        <p>Started working at Ikea Emeryville as a Customer Service Associate, primary duties was pushing carts into the store, assist customer with furniture: loading, helping them find items, carry-outs</p>
-                        
-                    </div>
-                </article>
-            </div>
             <div class="timeline__layout">
                 <div class="timeline__dotted layer" data-show-effect="zoomIn" data-show-delay="1300" data-time="300"></div>
                 <div class="timeline__inner timeline__time layer" data-show-effect="fadeIn" data-show-delay="1700">
@@ -340,7 +350,7 @@
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1800" >
                     <h3 class="title title_small timeline__title">Community College</h3>
                     <div class="timeline__description">
-                        <p>Started taking courses at Laney College. I took C and C++, English 1A, Communication 1A, Trigonometry</p>
+                        <p>Computer Science, General Education, Communication, Mathematics</p>
                     </div>
                 </article>
             </div>
@@ -385,10 +395,10 @@
 	<div class="nav-panel__content">
 		<nav class="nav nav-panel__layout">
 			<a href="#welcome" class="nav-panel__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome"><i class="icon icon-home nav-panel__icon"></i>Home</a>
-			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="about"><i class="icon icon-user nav-panel__icon "></i>portfolio</a>
-			<a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="skills"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
-			<a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a>
-			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="4" data-id-section="portfolio"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
+			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio"><i class="icon icon-user nav-panel__icon "></i>portfolio</a>
+			<a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="about"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
+			<a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="skills"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a>
+			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="4" data-id-section="experience"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
 	</div>
 </div>
 
