made some changes

--- a/index.html
+++ b/index.html
@@ -134,22 +134,30 @@
 	</div>
 </section>
 
-<section id="about" class="wrapper display_js">
+<!-- <section id="about" class="wrapper display_js">
     <div class="main-container main-container_padding">
         <header class="main-container__header">
             <h2 class="title title_bottom-decor">About me</h2>
             <div class="subtitle">Let me introduce myself</div>
         </header>
+    </div>
+</section> -->
+<section id="about" class="wrapper box_blur skills-display display_js">
+    <div class="main-container main-container_padding">
+        <header class="main-container__header">
+            <h2 class="title title_bottom-decor title_white">About Me</h2>
+        </header>
+        <div class="content skills">
+            <div class="skills__column layer" data-show-effect="fadeIn" data-show-delay="400">
         <div class="content about-me">
             <div class="about-me__layout layer" data-show-effect="fadeInLeft" data-show-delay="200">
                 <div class="avatar">
                     <img class="avatar__img responsive-img" src="img/billhoang.jpg" alt="side view of bill"/>
                 </div>
                 <div class="about-me__content">
-                    <p class='aboutC'>I was born and raised in Oakland, CA. I was always curious about how things worked and why they worked. One of my favorite things to do is to take apart things and figure out all the components and put them back together. This lead me to developed a nack for coding projects. While coding, I give my best to comment out what each line of code is doing. When I work on a project, I try to study every bit and piece, so I would know it inside and out.</p>
+                    <p class='aboutC'>I love to code and play video games, you will always find me doing one or the other. Taking on new challenges is one of the best ways to grow and expand my knowledge and skills. I love to draw so the artist in me loves CSS. Always wondered how websites function and why they worked, so Javascript is my language of choice, along with HTML. I have a nack for problem solving so debugging code and seeing it function brings me joy. </p>
                 </div>
-            </div>
-            <section class="about-me__sidebar layer" data-show-effect="fadeInRight" data-show-delay="200">
+            <section class="about-me__sidebar layer" data-show-effect="fadeInLeft" data-show-delay="200">
                 <h3 class="title title_middle about-me__title">PERSONAL <span class="about-me__title-label">INFO</span></h3>
                 <div class="about-me__row">
                     <div class="about-me__column">
@@ -179,7 +187,7 @@
                     <div class="about-me__column">
                         <div class="about-me__tag">Follow me</div>
                     </div>
-                    <div class="about-me__column">
+                    <div class="about-me__columm">
                         <a href="https://www.facebook.com/bill.hoang.754" target="blank" class="icon icon_middle icon_rounded icon_rounded-black icon_rounded-hover icon-facebook about-me__icon layer" data-show-effect="flipInY" data-show-delay="900"></a>
                         <a href="https://www.linkedin.com/in/billhoang79" class="icon icon_middle icon_rounded icon_rounded-black icon_rounded-hover icon-linkedin about-me__icon layer" target="blank" data-show-effect="flipInY" data-show-delay="1000"></a>
                         <a href="https://github.com/BillHoang79" class="icon icon_middle icon_rounded icon_rounded-black icon_rounded-hover icon-github about-me__icon layer" target="blank"  data-show-effect="flipInY" data-show-delay="1100"></a>
@@ -187,18 +195,9 @@
                     </div>
                 </div>
             </section>
-        </div>
-    </div>
-</section>
-<section id="skills" class="wrapper box_blur skills-display display_js">
-    <div class="main-container main-container_padding">
-        <header class="main-container__header">
-            <h2 class="title title_bottom-decor title_white">Skills</h2>
-        </header>
-        <div class="content skills">
-            <div class="skills__column layer" data-show-effect="fadeIn" data-show-delay="400">
-               <p>Here are some of the skills I used in my projects. I love to code and challenge myself on a daily bases.</p>
             </div>
+        </div>
+        </div>
             <div class="skills__column skills-bar">
                 <div class="skills-bar__item">
                     <div class="skill-bar layer skill-bar_js" data-show-effect="fadeInLeft" data-show-delay="400" data-skill-bar-width="">
@@ -285,13 +284,13 @@
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1200">
                     <h3 class="title title_small timeline__title">Web Developer</h3>
                     <div class="timeline__description">
-                        <p>using media queries and bootstrap to make responsive designs websites and applications<br>
-                            using jQuery to make applications, converting raw Javascript to jQuery<br>
-                            using CSS to add next level designs to websites and applications<br>
+                        <p>Using media queries and bootstrap to make responsive designs websites and applications<br>
+                            jQuery to make applications, converting raw Javascript to jQuery<br>
+                            CSS to add next level designs to websites and applications<br>
                             Javascript to develope applications<br>
-                            design and maintenance websites <br>
-                            learn to ways to appearance new tasks<br>
-                            critical thinking and intense problem solvin</p>
+                            Design and maintenance websites <br>
+                            Learn to ways to approach new tasks<br>
+                            Critical thinking and intense problem solving</p>
                     </div>
                 </article>
             </div>  
@@ -305,6 +304,9 @@
                     <h3 class="title title_small timeline__title">Web Developer</h3>
                     <div class="timeline__description">
                         <p>Build and maintain website using resposive designs<br>
+                           Use css to add color and styles to websites<br>
+                           Javascript to make parts of the site run<br>
+                           jQuery to add plug-ins and shorten codes<br>
                             </p>
                         
                     </div>
@@ -377,8 +379,8 @@
 			<a href="#welcome" class="nav__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome">Home</a>
             <a href="#portfolio" class="nav__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio">Portfolio</a>
 			<a href="#about" class="nav__link init-scroll_js" data-scroll-nav="2" data-id-section="about">About me</a>
-			<a href="#skills" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="skills">Skills</a>
-            <a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="4" data-id-section="experience">Experience</a>
+<!-- 			<a href="#skills" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="skills">Skills</a>
+ -->            <a href="#experience" class="nav__link init-scroll_js" data-scroll-nav="3" data-id-section="experience">Experience</a>
 		</nav>
 		<div class="nav-icon mobile-menu-open_js">
 			<div class="icon-menu"></div>
@@ -397,8 +399,8 @@
 			<a href="#welcome" class="nav-panel__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome"><i class="icon icon-home nav-panel__icon"></i>Home</a>
 			<a href="#portfolio" class="nav-panel__link init-scroll_js" data-scroll-nav="1" data-id-section="portfolio"><i class="icon icon-user nav-panel__icon "></i>portfolio</a>
 			<a href="#about" class="nav-panel__link init-scroll_js" data-scroll-nav="2" data-id-section="about"><i class="icon icon-skills nav-panel__icon"></i>About Me</a>
-			<a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="skills"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a>
-			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="4" data-id-section="experience"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
+			<!-- <a href="#skills" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="skills"><i class="icon icon-diamond nav-panel__icon"></i>Skills</a> -->
+			<a href="#experience" class="nav-panel__link init-scroll_js" data-scroll-nav="3" data-id-section="experience"><i class="icon icon-th nav-panel__icon"></i>Experience</a>
 	</div>
 </div>
 
