modified some codes

--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
                     <span class="timeline__place-work">Codify Academy</span>
                 </div>
                 <article class="timeline__inner timeline__content layer" data-show-effect="fadeInRight" data-show-delay="1000">
-                    <h3 class="title title_small timeline__title">Front-end developer</h3>
+                    <h3 class="title title_small timeline__title">Front-End developer</h3>
                     <div class="timeline__description">
-                        <p>16 week Front-end Developer training program<br>
+                        <p>16 week Front-End Developer training program<br>
                             Each week we had to build a couple of projects based on what we learned<br>
                             Started witht the basics like CSS and HTML, then we advanced to Javascript, JQuery, Angular, Bootstrap, etc. </p>
                     </div>
@@ -373,7 +373,7 @@
 		<div class="logo logo_left">
 			<span class="logo__item">Bill</span>
 			<span class="logo__item logo__item_bold">Hoang</span>
-			<div class="logo__label">Front-end developer</div>
+			<div class="logo__label">Front-End developer</div>
 		</div>
 		<nav class="nav nav_main">
 			<a href="#welcome" class="nav__link init-scroll_js" data-scroll-nav="0" data-id-section="welcome">Home</a>
