changed a few things

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>	
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Utube Video Search</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Search Video</span>
 				</div>
 			</a>
 
@@ -47,7 +47,7 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Survey</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Take Survey</span>
 				</div>
 			</a>
 
@@ -57,7 +57,7 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">37 Signals</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">View Website</span>
 				</div>
 			</a>
 
@@ -67,17 +67,17 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Tictactoe</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Play!!</span>
 				</div>
 			</a>
 
 			<a href="Projects/jquerymobileapp/index.html" class="list-works__item layer open-popup_js" data-show-effect="fadeIn" data-show-delay="1100" data-id="pan">
 				<div class="list-works__wrap-img">
-					<img src="img/runtracker1.jpg" class="responsive-img" alt="Work" />
+					<img src="img/runtracker1.jpg" class="responsive-img" alt="run tracker app" />
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Track Your Runs!</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Track Runs</span>
 				</div>
 			</a>
 		
@@ -88,7 +88,7 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Digital Clock</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">What time is it?</span>
 				</div>
 			</a>
 
@@ -98,7 +98,7 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Jquery Gallery</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Go to Gallery</span>
 				</div>
 			</a>
 
@@ -108,7 +108,7 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Goku Portfolio</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">World' Greatest Fighter</span>
 				</div>
 			</a>
 
@@ -118,7 +118,7 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">Quiz App</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Test my knowledge</span>
 				</div>
 			</a>	
 
@@ -128,20 +128,12 @@
 				</div>
 				<div class="list-works__overlay"> 
 					<span class="list-works__name-project list-works__name-project_fade">DBZ Character Select</span>
-					<span class="list-works__link-project">showmore</span>
+					<span class="list-works__link-project">Select Character</span>
 				</div>
 			</a>
 	</div>
 </section>
 
-<!-- <section id="about" class="wrapper display_js">
-    <div class="main-container main-container_padding">
-        <header class="main-container__header">
-            <h2 class="title title_bottom-decor">About me</h2>
-            <div class="subtitle">Let me introduce myself</div>
-        </header>
-    </div>
-</section> -->
 <section id="about" class="wrapper box_blur skills-display display_js">
     <div class="main-container main-container_padding">
         <header class="main-container__header">
@@ -666,7 +658,7 @@
 (function($){
 
 	$("#welcome").YTPlayer({
-		videoId: "0PYSlOutMNw",
+		videoId: "dhe2oaNeimk",
 		pauseOnScroll: true
 	});
 
